@@ -1,3 +1,8 @@
+2008-01-22  Manuel Lopez-Ibanez  <manu@gcc.gnu.org>
+
+	PR middle-end/33092
+	* gcc.dg/pr33092.c: New.
+
 2008-01-22  Andreas Krebbel  <krebbel1@de.ibm.com>
 
 	* gcc.target/s390/20020926-1.c: Add -m31 option.
