@@ -1,3 +1,12 @@
+2008-01-22  Manuel Lopez-Ibanez  <manu@gcc.gnu.org>
+
+	PR middle-end/33092
+	* tree-pass.h (pass_build_alias): New pass.
+	* tree-ssa-alias.c (gate_build_alias): New.
+	(pass_build_alias): New.
+	* passes.c (init_optimization_passes): Add pass_build_alias after
+	pass_create_structure_vars.
+
 2008-01-22  Wolfgang Gellerich  <gellerich@de.ibm.com>
 
 	* config/s390/s390.h (S390_TDC_POSITIVE_NORMALIZED_NUMBER):
